tests/test-files/parse-while.txt
================================================================================
1 Parse while
================================================================================

(package coalton-unit-tests/parse-while
  (import coalton-library/functions))

(define (f)
  (while :alabel True (trace "one") (trace "two")))

================================================================================
100 Missing condition
================================================================================

(package test-parser)

(define f (while))

--------------------------------------------------------------------------------

error: Malformed while expression
  --> test:3:16
   |
 3 |  (define f (while))
   |                  ^ expected condition

================================================================================
101 Missing body
================================================================================

(package test-parser)

(define f (while false))

--------------------------------------------------------------------------------

error: Malformed while expression
  --> test:3:22
   |
 3 |  (define f (while false))
   |                        ^ expected body

================================================================================
102 Missing condition
================================================================================

(package test-parser)

(define f (while :label))

--------------------------------------------------------------------------------

error: Malformed while expression
  --> test:3:23
   |
 3 |  (define f (while :label))
   |                         ^ expected condition

================================================================================
103 Missing body, with label
================================================================================

(package test-parser)

(define f (while :label True))

--------------------------------------------------------------------------------

error: Malformed while expression
  --> test:3:28
   |
 3 |  (define f (while :label True))
   |                              ^ expected body
